fixed clipped question issue

--- a/sass/components/_question.scss
+++ b/sass/components/_question.scss
@@ -22,7 +22,7 @@
         }
 
         h1 {
-            position: fixed;
+            position: absolute;
             color: white;
             font-family: "brandon-grotesque", sans-serif;
         }
